--- a/index.html
+++ b/index.html
@@ -12,31 +12,40 @@
   </head>
 	<body>
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-		  <a class="navbar-brand" href="index.html"><img src="assets/img/nalogo-new.jpg"></a>
-		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-		    <span class="navbar-toggler-icon"></span>
-		  </button>
-		  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-		    <ul class="navbar-nav mr-auto">
-		      <li class="nav-item active">
-		        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-		      </li>
-		      <li class="nav-item">
-		        <a class="nav-link" href="http://newavenues.org/">New Avenues for Youth</a>
-		      </li>
-		      <li class="nav-item">
-		        <a class="nav-link" href="#">User Login</a>
-		      </li>
-		      <li class="nav-item">
-		        <a class="nav-link" href="adminview.html">Admin</a>
-		      </li>
-		    </ul>
-		    <form class="form-inline my-2 my-lg-0">
-		      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-		      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-		    </form>
-		  </div>
-		</nav>
+	      <a class="navbar-brand" href="index.html"><img src="assets/img/nalogo-new.jpg"></a>
+	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+	        <span class="navbar-toggler-icon"></span>
+	      </button>
+	      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+	        <ul class="navbar-nav mr-auto">
+	          <li class="nav-item active">
+	            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+	          </li>
+	          <li class="nav-item">
+	            <a class="nav-link" href="http://newavenues.org/">New Avenues for Youth</a>
+	          </li>
+	          <li class="nav-item">
+	            <a class="nav-link" href="#">User Login</a>
+	          </li>
+	          <li class="nav-item">
+	            <a class="nav-link" href="adminview.html">Admin</a>
+	          </li>
+	        </ul>
+	       <select class="custom-select">
+	          <option selected>Select a Category</option>
+	          <option value="1">Clothing</option>
+	          <option value="2">Education</option>
+	          <option value="2">Food Assistance</option>
+	          <option value="3">Housing</option>
+	          <option value="3">Job Services</option>
+	          <option value="3">Life Skills</option>
+	        </select>
+	        <form class="form-inline my-2 my-lg-0">
+	          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+	          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+	        </form>
+	      </div>
+	    </nav>
 		<div class="wrapper">
 			<div class="container">
 			<table class="table table-hover">
