add information for first resource entry

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
 		  <tbody>
 		    <tr data-toggle="collapse" data-target="#accordion1" class="clickable">
 		      <th scope="row">1</th>
-		      <td>Resource 1</td>
-		      <td><a href="/">Website</a></td>
+		      <td>New Avenues Alternative School</td>
+		      <td><a href="http://newavenues.org/education/">Website</a></td>
 		      <td>12-1-2017</td>
 		      <td><a href=""><i class="fa fa-thumbs-up" aria-hidden="true"></i></a> / <a href="/"><i class="fa fa-thumbs-down" aria-hidden="true"></i></a></td>
 		      <td><a href="/">Comments(0)</a></td>
@@ -71,14 +71,14 @@
 		    <tr>
 	            <td colspan="42">
 	                <div id="accordion1" class="collapse">
-	                <p>Here is where a lovely description will go! Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi egestas, elit sit amet luctus consectetur, quam eros elementum lacus, at tincidunt velit elit dignissim mauris. Nam purus mauris, volutpat sit amet arcu ac, congue consectetur massa. Nunc pretium urna mauris, id laoreet ipsum sollicitudin eu. Quisque nibh ex, tempus in metus nec, blandit finibus ante. Donec pellentesque varius mi, sit amet scelerisque augue rutrum ut. Praesent egestas pulvinar elit ut porta. Aliquam tincidunt id libero in vestibulum. Nullam nec ligula et sapien euismod vehicula eu eget sapien. </p>
-	                <p><i class="fa fa-tags" aria-hidden="true"></i> <a href="/">tag1</a>, <a href="/">tag2</a>, <a href="/">tag3</a></p>
+	                <p>The New Avenues Alternative School provides education opportunities for foster, at-risk, and homeless youth. Open five days per week year-round, the school is fully accredited, specifically designed for students who have experienced barriers to education, and is co-located with other New Avenues programming to provide access for youth to additional support and resources. For general Education program information, contact us at <a href="/">education@newavenues.org</a> or 503.517.3985.</p>
+	                 <p><i class="fa fa-tags" aria-hidden="true"></i> <a href="/">under18</a>, <a href="/">assessment</a>, <a href="/">DHS custody</a></p>
 	            	</div>
 	            </td>
         	</tr>
 		    <tr data-toggle="collapse" data-target="#accordion2" class="clickable">
 		      <th scope="row">2</th>
-		      <td>Resource 2</td>
+		      <td>Scholarships</td>
 		      <td><a href="/">Website</a></td>
 		      <td>12-1-2017</td>
 		      <td><a href=""><i class="fa fa-thumbs-up" aria-hidden="true"></i></a> / <a href="/"><i class="fa fa-thumbs-down" aria-hidden="true"></i></a></td>
@@ -94,7 +94,7 @@
         	</tr>
 		    <tr data-toggle="collapse" data-target="#accordion3" class="clickable">
 		      <th scope="row">3</th>
-		      <td>Resource 3</td>
+		      <td>Tutoring</td>
 		      <td><a href="/">Website</a></td>
 		      <td>12-1-2017</td>
 		      <td><a href=""><i class="fa fa-thumbs-up" aria-hidden="true"></i></a> / <a href="/"><i class="fa fa-thumbs-down" aria-hidden="true"></i></a></td>
